@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: plot.c,v 1.104.2.4 2010/02/18 05:52:49 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: plot.c,v 1.104.2.5 2010/03/21 17:06:24 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - plot.c */
@@ -114,7 +114,9 @@ extern smg$create_key_table();
 # ifdef GNUPLOT_HISTORY
 #  include <readline/tilde.h>
 # endif
-extern int rl_complete_with_tilde_expansion;
+# if !defined(MISSING_RL_TILDE_EXPANSION)
+   extern int rl_complete_with_tilde_expansion;
+# endif
 #endif
 
 /* BSD editline
@@ -352,7 +354,7 @@ main(int argc, char **argv)
     rl_readline_name = "Gnuplot";
     rl_terminal_name = getenv("TERM");
 #endif
-#if defined(HAVE_LIBREADLINE)
+#if !defined(MISSING_RL_TILDE_EXPANSION)
     rl_complete_with_tilde_expansion = 1;
 #endif
 
@@ -578,7 +580,7 @@ main(int argc, char **argv)
 	/* come back here from int_error() */
 	if (interactive == FALSE)
 	    exit_status = EXIT_FAILURE;
-#ifdef HAVE_LIBREADLINE
+#ifdef HAVE_READLINE_RESET
 	else
 	{
 	    /* reset properly readline after a SIGINT+longjmp */
